# serde-matcher

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: simple.rs
src/: lib.rs
