[package]
name = "serde-matcher"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A library for matching JSON data using a declarative syntax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
