[package]
name = "serde_json_matcher"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "A library for matching JSON data using a declarative syntax"
tags = ["serde"]
repository = "https://github.com/ianatha/serde_json_matcher"
readme = "README.md"

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
