[package]
name = "serde_json_matcher"
version = "0.1.4"
edition = "2018"
license = "Apache-2.0"
description = "A library for matching JSON data using a declarative syntax"
tags = ["serde"]
repository = "https://github.com/ianatha/serde_json_matcher"
readme = "README.md"
rust-version = "1.36"

[dependencies]
serde = { version = "^1.0.149", features = ["derive"] }
serde_json = "1.0.90"
